--- a/Asssignment_5/index.html
+++ b/Asssignment_5/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bun Bun Bake Shop</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="top-section">
+        <div id="top-section-overlay">
+            <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"></a>
+            <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
+            <p class="homepage-title"><span class="underlined">Bun</span> <span class="underlined">Bun</span> Bake Shop</p>
+        </div>
+    </section>
+    <section id="bottom-section">
+        <p class="bottom-section-text"> <img src="./images/location-icon.svg" class="location-icon golden-icon" alt="" width="36" height="36"> Pittsburgh, PA <a href="http://maps.google.com" class="underlined">MAP</a></p>
+        <p class="bottom-section-text"><img src="./images/shipping-icon.svg" class="shipping-icon golden-icon" alt="" width="36" height="36"> We ship <span class="red-color"><strong>fresh</strong></span> everywhere in Pittsburgh!</p>
+        <div id="homepage-image-container">
+            <span id="homepage-bottom-img-1" class="homepage-bottom-img"></span>
+            <span id="homepage-bottom-img-2" class="homepage-bottom-img"></span>
+            <span id="homepage-bottom-img-3" class="homepage-bottom-img"></span>
+        </div>
+        <a href="./product-browsing.html">
+            <p class="underlined">SEE PRODUCTION</p>
+            <div class="horizontal-flex-container">
+                <div class="v-shape-icon">
+                    <div class="v-shape-icon-part-1"></div>
+                    <div class="v-shape-icon-part-2"></div>
+                </div>
+            </div>
+        </a>
+    </section>
 </body>
 </html>
