Add the Contact icon on home page

--- a/Asssignment_5/index.html
+++ b/Asssignment_5/index.html
@@ -33,5 +33,9 @@
             </div>
         </a>
     </section>
+    <div class="contact-icon golden-icon">
+        <img src="./images/contact-icon.svg" alt="" width="50">
+        <p>CONTACT</p>
+    </div>
 </body>
 </html>
