Build skeleton of product browsing page, Add and style contact button, Add contact.html page

--- a/Asssignment_5/index.html
+++ b/Asssignment_5/index.html
@@ -24,18 +24,20 @@
             <span id="homepage-bottom-img-3" class="homepage-bottom-img"></span>
         </div>
         <a href="./product-browsing.html">
-            <p class="underlined">SEE PRODUCTION</p>
-            <div class="horizontal-flex-container">
+            <p class="underlined">SEE PRODUCTS</p>
+            <!-- <div class="horizontal-flex-container">
                 <div class="v-shape-icon">
                     <div class="v-shape-icon-part-1"></div>
                     <div class="v-shape-icon-part-2"></div>
                 </div>
-            </div>
+            </div> -->
         </a>
     </section>
     <div class="contact-icon golden-icon">
-        <img src="./images/contact-icon.svg" alt="" width="50">
-        <p>CONTACT</p>
+        <a href="./contact.html">
+            <img src="./images/contact-icon.svg" alt="" width="50">
+            <p>CONTACT</p>
+        </a>
     </div>
 </body>
 </html>
