--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+    <section class="content-header-section">
+        <div class="content-header-section-overlay">
+            <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
+            <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
+            <p class="content-page-title">Pittsburgh's <span class="underlined">Finest</span> Cinnamon Rolls</p>
+        </div>
+    </section>
+    <section class="cinnamon-roll-flex-container">
+        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">Hello</div>
+    </section>
+
+    <div class="contact-icon golden-icon">
+        <a href="./contact.html">
+            <img src="./images/contact-icon.svg" alt="" width="50">
+            <p>CONTACT</p>  
+        </a>
+    </div>
 </body>
 </html>
