Add footer skeleton

--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -31,5 +31,16 @@
             <p>CONTACT</p>  
         </a>
     </div>
+    <footer>
+        <div class="footer-element left-footer">
+            <p class="footer-title">Contact Info</p>
+        </div>
+        <div class="footer-element mid-footer">
+            <p class="footer-title">Opening Hours</p>
+        </div>
+        <div class="footer-element right-footer">
+            <p class="footer-title">location</p>
+        </div>
+    </footer>
 </body>
 </html>
