--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -17,12 +17,57 @@
         </div>
     </section>
     <section class="cinnamon-roll-flex-container">
-        <div class="cinnamon-roll-card">Hello</div>
-        <div class="cinnamon-roll-card">Hello</div>
-        <div class="cinnamon-roll-card">Hello</div>
-        <div class="cinnamon-roll-card">Hello</div>
-        <div class="cinnamon-roll-card">Hello</div>
-        <div class="cinnamon-roll-card">Hello</div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-1"></div>
+            <p class="cinnamon-roll-name">Original</p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-2"></div>
+            <p class="cinnamon-roll-name">Blackberry</p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-3"></div>
+            <p class="cinnamon-roll-name">Walnut</p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-4"></div>
+            <p class="cinnamon-roll-name">Original</p>
+            <p class="cinnamon-roll-subname">gluten free</p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-5"></div>
+            <p class="cinnamon-roll-name">Pumpkin Spice</p>
+            <p class="cinnamon-roll-subname"></p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+        <div class="cinnamon-roll-card">
+            <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-6"></div>
+            <p class="cinnamon-roll-name">Caramel Peacan</p>
+            <div class="cinnamon-roll-card-text-container">
+                <p class="connamon-roll-card-details">Details</p>
+                <button class="cinnamon-roll-card-button">Add to Cart</button>
+            </div>
+        </div>
+
     </section>
 
     <div class="contact-icon golden-icon">
