--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -79,12 +79,22 @@
     <footer>
         <div class="footer-element left-footer">
             <p class="footer-title">Contact Info</p>
+            <p><img src="./images/twitter.svg" class="footer-icon" alt="Twitter">@bunbunbakeshop</p>
+            <p><img src="./images/ig.svg" class="footer-icon" alt="Twitter">@bunbunbakery</p>
+            <p><img src="./images/email.svg" class="footer-icon" alt="Twitter">help@bunbunbakery.com</p>
+            <p><img src="./images/call.svg" class="footer-icon" alt="Twitter">(412) 687-2494</p>
         </div>
         <div class="footer-element mid-footer">
             <p class="footer-title">Opening Hours</p>
+            <p>Mon - Fri: 8:00 AM - 5:00 PM</p>
+            <p>Sat: 8:00 AM - 4:00 PM</p>
+            <p>Sun: 10:00 AM - 4:00 PM</p>
         </div>
         <div class="footer-element right-footer">
             <p class="footer-title">location</p>
+            <p>417 S Craig St</p>
+            <p>Pittsburgh, PA 15213 &emsp;<u>See Map</u></p>                
+            <p>(412) 687-2494</p>
         </div>
     </footer>
 </body>
