Finish Product Detail page

--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <section class="content-header-section">
+    <section class="content-header-section" id="product-browsing-header">
         <div class="content-header-section-overlay">
             <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
             <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
@@ -21,7 +21,7 @@
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-1"></div>
             <p class="cinnamon-roll-name">Original</p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
@@ -29,7 +29,7 @@
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-2"></div>
             <p class="cinnamon-roll-name">Blackberry</p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-3"></div>
             <p class="cinnamon-roll-name">Walnut</p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
@@ -46,7 +46,7 @@
             <p class="cinnamon-roll-name">Original</p>
             <p class="cinnamon-roll-subname">gluten free</p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <p class="cinnamon-roll-name">Pumpkin Spice</p>
             <p class="cinnamon-roll-subname"></p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
@@ -63,7 +63,7 @@
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-6"></div>
             <p class="cinnamon-roll-name">Caramel Peacan</p>
             <div class="cinnamon-roll-card-text-container">
-                <p class="connamon-roll-card-details">Details</p>
+                <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
                 <button class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
