Fix the contact button issue, clean everything up

--- a/Asssignment_5/product-browsing.html
+++ b/Asssignment_5/product-browsing.html
@@ -16,13 +16,17 @@
             <p class="content-page-title">Pittsburgh's <span class="underlined">Finest</span> Cinnamon Rolls</p>
         </div>
     </section>
+    <a href="./index.html" class="back-button">
+        <img src="./images/arrow_back.svg" class="back-arrow" alt="">
+        <p class="underlined">Back</p>
+    </a>
     <section class="cinnamon-roll-flex-container">
         <div class="cinnamon-roll-card">
             <div class="cinnamon-roll-card-image" id="cinnamon-roll-card-image-1"></div>
             <p class="cinnamon-roll-name">Original</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -30,7 +34,7 @@
             <p class="cinnamon-roll-name">Blackberry</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -38,7 +42,7 @@
             <p class="cinnamon-roll-name">Walnut</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -47,7 +51,7 @@
             <p class="cinnamon-roll-subname">gluten free</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -56,7 +60,7 @@
             <p class="cinnamon-roll-subname"></p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
         <div class="cinnamon-roll-card">
@@ -64,17 +68,19 @@
             <p class="cinnamon-roll-name">Caramel Peacan</p>
             <div class="cinnamon-roll-card-text-container">
                 <a href="product-detail.html" class="connamon-roll-card-details">Details</a>
-                <button class="cinnamon-roll-card-button">Add to Cart</button>
+                <button onclick="location.href='./product-detail.html'" type="button" class="cinnamon-roll-card-button">Add to Cart</button>
             </div>
         </div>
 
     </section>
 
-    <div class="contact-icon golden-icon">
-        <a href="./contact.html">
-            <img src="./images/contact-icon.svg" alt="" width="50">
-            <p>CONTACT</p>  
-        </a>
+    <div class="contact-icon-wrapper">
+        <div class="contact-icon golden-icon">
+            <a href="./contact.html">
+                <img src="./images/contact-icon.svg" alt="" width="50">
+                <p>CONTACT</p>  
+            </a>
+        </div>
     </div>
     <footer>
         <div class="footer-element left-footer">
