--- a/Asssignment_5/product-detail.html
+++ b/Asssignment_5/product-detail.html
@@ -21,16 +21,16 @@
             <p class="underlined">Back</p>
         </a>
         <div class="product-detail">
-            <img src="./images/cinnamon-roll-5-full.jpg" alt="" class="product-detail-img">
+            <div class="product-detail-img"></div>
             <div class="product-detail-description">
                 <p class="product-detail-title underlined">Original</p>
                 <p>The classic original receipe. Who can say no?</p>
                 <p><span class="golden-color">$</span> 3.00 / roll</p>
-                <p class="one-point-five-line-height"><span class="underlined">Perfect for</span> <br>
+                <p class="twice-line-height"><span class="underlined">Perfect for</span> <br>
                     kids with sweet teeth <br>
                     students racing after deadlines</p>
 
-                <p class="one-point-five-line-height"><span class="underlined">Allergy information</span> <br>
+                <p class="twice-line-height"><span class="underlined">Allergy information</span> <br>
                     might contain peanuts</p>
 
                 <div class="add-to-cart-selection-options">
@@ -44,7 +44,7 @@
                         <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
                     </div>
 
-                    <button class="add-to-cart-button">Add to Cart</button>
+                    <button onclick="location.href='./product-detail.html'" type="button" class="add-to-cart-button">Add to Cart</button>
                 </div>
 
             </div>
