Fix homepage Contact, Polish browsing page card style

--- a/Asssignment_5/index.html
+++ b/Asssignment_5/index.html
@@ -33,11 +33,13 @@
             </div> -->
         </a>
     </section>
-    <div class="contact-icon golden-icon">
-        <a href="./contact.html">
-            <img src="./images/contact-icon.svg" alt="" width="50">
-            <p>CONTACT</p>
-        </a>
+    <div class="contact-icon-wrapper">
+        <div class="contact-icon golden-icon">
+            <a href="./contact.html">
+                <img src="./images/contact-icon.svg" alt="" width="50">
+                <p>CONTACT</p>  
+            </a>
+        </div>
     </div>
 </body>
 </html>
