--- a/Asssignment_5/product-detail.html
+++ b/Asssignment_5/product-detail.html
@@ -26,11 +26,11 @@
                 <p class="product-detail-title underlined">Original</p>
                 <p>The classic original receipe. Who can say no?</p>
                 <p><span class="golden-color">$</span> 3.00 / roll</p>
-                <p class="twice-line-height"><span class="underlined">Perfect for</span> <br>
+                <p class="one-point-five-line-height"><span class="underlined">Perfect for</span> <br>
                     kids with sweet teeth <br>
                     students racing after deadlines</p>
 
-                <p class="twice-line-height"><span class="underlined">Allergy information</span> <br>
+                <p class="one-point-five-line-height"><span class="underlined">Allergy information</span> <br>
                     might contain peanuts</p>
 
                 <div class="add-to-cart-selection-options">
@@ -50,11 +50,13 @@
             </div>
         </div>
     </section>
-    <div class="contact-icon golden-icon">
-        <a href="./contact.html">
-            <img src="./images/contact-icon.svg" alt="" width="50">
-            <p>CONTACT</p>  
-        </a>
+    <div class="contact-icon-wrapper">
+        <div class="contact-icon golden-icon">
+            <a href="./contact.html">
+                <img src="./images/contact-icon.svg" alt="" width="50">
+                <p>CONTACT</p>  
+            </a>
+        </div>
     </div>
     <footer>
         <div class="footer-element left-footer">
