Fix the home icon issue

--- a/Asssignment_5/product-detail.html
+++ b/Asssignment_5/product-detail.html
@@ -10,7 +10,7 @@
 <body>
     <section class="content-header-section" id="product-detail-header">
         <div class="content-header-section-overlay">
-            <a href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
+            <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
             <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
             <p class="content-page-title"><span class="underlined">Product</span> Detail</p>
         </div>
