Fix HTML CSS issues based on w3 validator output

--- a/Asssignment_5/product-detail.html
+++ b/Asssignment_5/product-detail.html
@@ -39,7 +39,7 @@
                         <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
                     </div>
     
-                    <div class="dropdown" id="quantity-dropdown">
+                    <div class="dropdown" id="glazing-dropdown">
                         <p class="dropdown-placeholder">Glazing</p>
                         <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
                     </div>
