Add dropdown items

--- a/Asssignment_5/product-detail.html
+++ b/Asssignment_5/product-detail.html
@@ -34,14 +34,30 @@
                     might contain peanuts</p>
 
                 <div class="add-to-cart-selection-options">
-                    <div class="dropdown" id="quantity-dropdown">
-                        <p class="dropdown-placeholder">Quantity</p>
-                        <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
+                    <div class="dropdown">
+                        <div class="dropdown-appearance" id="quantity-dropdown">
+                            <p class="dropdown-placeholder">Quantity</p>
+                            <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>1 Roll</p>
+                            <p>3 Rolls</p>
+                            <p>6 Rolls</p>
+                            <p>12 Rolls</p>
+                        </div>
                     </div>
     
-                    <div class="dropdown" id="glazing-dropdown">
-                        <p class="dropdown-placeholder">Glazing</p>
-                        <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
+                    <div class="dropdown">
+                        <div class="dropdown-appearance" id="glazing-dropdown">
+                            <p class="dropdown-placeholder">Glazing</p>
+                            <div class="arrow-down-wrapper"><div class="arrow-down"></div></div>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>none</p>
+                            <p>sugar-milk</p>
+                            <p>vanilla-milk</p>
+                            <p>double-chocolate</p>
+                        </div>
                     </div>
 
                     <button onclick="location.href='./product-detail.html'" type="button" class="add-to-cart-button">Add to Cart</button>
