Change homepage see product link to button

--- a/Asssignment_5/index.html
+++ b/Asssignment_5/index.html
@@ -23,8 +23,7 @@
             <span id="homepage-bottom-img-2" class="homepage-bottom-img"></span>
             <span id="homepage-bottom-img-3" class="homepage-bottom-img"></span>
         </div>
-        <a href="./product-browsing.html">
-            <p class="underlined">SEE PRODUCTS</p>
+        <a href="./product-browsing.html" class="see-product-link"><span class="underlined">SEE PRODUCTS</span>
             <!-- <div class="horizontal-flex-container">
                 <div class="v-shape-icon">
                     <div class="v-shape-icon-part-1"></div>
