Change delete button for cart list items

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -31,7 +31,8 @@
                     <div class="shopping-cart-item-glazing-dropdown"></div>
                     <div class="shopping-cart-item-quantity-dropdown"></div>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
-                    <div>Delete</div>
+                    <button class="delete-button golden-icon">
+                    </button>
                 </div>
             </div>
             <hr>
@@ -44,7 +45,8 @@
                     <div class="shopping-cart-item-glazing-dropdown"></div>
                     <div class="shopping-cart-item-quantity-dropdown"></div>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
-                    <div>Delete</div>
+                    <button class="delete-button golden-icon">
+                    </button>
                 </div>
             </div>
             <hr>
@@ -57,7 +59,8 @@
                     <div class="shopping-cart-item-glazing-dropdown"></div>
                     <div class="shopping-cart-item-quantity-dropdown"></div>
                     <div class="shopping-cart-item-price"><span class="golden-color">$</span> 3.00</div>
-                    <div>Delete</div>
+                    <button class="delete-button golden-icon">
+                    </button>
                 </div>
             </div>
             <hr>
