Improve based on Assignment 5 feedback: Add comments to file, Change minor text content

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -20,10 +20,14 @@
             <img src="./images/arrow_back.svg" class="back-arrow" alt="">
             <p class="underlined">Back</p>
         </a>
+        <!-- Below div contains the main shopping cart content on the page -->
         <div class="shopping-cart">
             <hr>
+            <!-- Each shopping cart item in a separate div, separated by horizontal lines -->
             <div class="shopping-cart-item">
+                <!-- Group elements for each item to left and right, having two separate divs to contain them -->
                 <div class="shopping-cart-item-left">
+                    <!-- Use background-image for the div in CSS instead of using img tag, which is harder to style -->
                     <div class="shopping-cart-item-img" id="shopping-cart-original-image"></div>
                     <div class="shopping-cart-item-name"><span class="underlined">Original</span></div>
                 </div>
