--- a/assignment_6/product-detail.html
+++ b/assignment_6/product-detail.html
@@ -31,7 +31,7 @@
                     students racing after deadlines</p>
 
                 <p class="one-point-five-line-height"><span class="underlined">Allergy information</span> <br>
-                    might contain peanuts</p>
+                    Contains peanuts</p>
 
                 <div class="add-to-cart-selection-options">
                     <div class="dropdown">
