Finish basic HTML and CSS, Change index page map link

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -68,6 +68,9 @@
                 </div>
             </div>
             <hr>
+
+            <div class="total-amount">Total:  <span class="golden-color">$</span> 21.00</div>
+            <button class="shopping-cart-checkout-button">Checkout</button>
         </div>
     </section>
     <div class="contact-icon-wrapper">
