--- a/assignment_6/index.html
+++ b/assignment_6/index.html
@@ -16,7 +16,7 @@
         </div>
     </section>
     <section id="bottom-section">
-        <p class="bottom-section-text"> <img src="./images/location-icon.svg" class="location-icon golden-icon" alt="" width="36" height="36"> Pittsburgh, PA <a href="http://maps.google.com" class="underlined">MAP</a></p>
+        <p class="bottom-section-text"> <img src="./images/location-icon.svg" class="location-icon golden-icon" alt="" width="36" height="36"> Pittsburgh, PA <a href="https://www.google.com/maps/place/40%C2%B026'37.3%22N+79%C2%B056'41.6%22W/@40.443704,-79.9454352,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d40.4437032!4d-79.944888" class="underlined">MAP</a></p>
         <p class="bottom-section-text"><img src="./images/shipping-icon.svg" class="shipping-icon golden-icon" alt="" width="36" height="36"> We ship <span class="red-color"><strong>fresh</strong></span> everywhere in Pittsburgh!</p>
         <div id="homepage-image-container">
             <span id="homepage-bottom-img-1" class="homepage-bottom-img"></span>
