Finish up static page, next step: finish dropdown and add functionality

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="content-header-section" id="product-detail-header">
+    <section class="content-header-section" id="cart-header">
         <div class="content-header-section-overlay">
             <a class="home-icon-link" href="./index.html"><img src="./images/cinammon-roll-icon.png" class="home-icon golden-icon" width="50" height="50" alt="HOME"><span class="home-icon-text"><span class="underlined">BUN</span> <span class="underlined">BUN</span></span></a>
             <a href="./cart.html"><img src="./images/shopping_cart.svg" class="cart-icon golden-icon" width="50" height="50" alt="Cart"></a>
@@ -43,7 +43,7 @@
             <div class="shopping-cart-item">
                 <div class="shopping-cart-item-left">
                     <div class="shopping-cart-item-img" id="shopping-cart-original-image"></div>
-                    <div class="shopping-cart-item-name"><span class="underlined">Original</span></div>
+                    <div class="shopping-cart-item-name"><span class="underlined">Blackberry</span></div>
                 </div>
                 <div class="shopping-cart-item-right">
                     <div class="shopping-cart-item-glazing-dropdown"></div>
@@ -57,7 +57,7 @@
             <div class="shopping-cart-item">
                 <div class="shopping-cart-item-left">
                     <div class="shopping-cart-item-img" id="shopping-cart-original-image"></div>
-                    <div class="shopping-cart-item-name"><span class="underlined">Original</span></div>
+                    <div class="shopping-cart-item-name"><span class="underlined">Walnut</span></div>
                 </div>
                 <div class="shopping-cart-item-right">
                     <div class="shopping-cart-item-glazing-dropdown"></div>
