Add js file to the product detail page, update information shown on screen when user makes selection

--- a/assignment_6/cart.html
+++ b/assignment_6/cart.html
@@ -16,7 +16,7 @@
         </div>
     </section>
     <section class="shopping-cart-section">
-        <a href="./product-browsing.html" class="back-button">
+        <a href="./product-detail.html" class="back-button">
             <img src="./images/arrow_back.svg" class="back-arrow" alt="">
             <p class="underlined">Back</p>
         </a>
