--- a/assignment_6/product-detail.html
+++ b/assignment_6/product-detail.html
@@ -21,7 +21,10 @@
             <p class="underlined">Back</p>
         </a>
         <div class="product-detail">
-            <div class="product-detail-img"></div>
+            <div class="product-detail-img">
+                <div class="quantity-display"></div>
+                <div class="glazing-display"></div>
+            </div>
             <div class="product-detail-description">
                 <p class="product-detail-title underlined">Original</p>
                 <p>The classic original receipe. Who can say no?</p>
@@ -84,5 +87,6 @@
             <p>(412) 687-2494</p>
         </div>
     </footer>
+    <script src="./js/product-detail.js"></script>
 </body>
 </html>
